[package]
name = "shell"
version = "0.1.0"
authors = [
    "Carl Stoker <carl_stoker@uri.edu>"
]
edition = "2021"
description = "Similarity-based Heuristic for Efficient Limiting of Levels for Partitioning and Clustering in CLAM"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { path = "../abd-clam" }
symagen = { path = "../SyMaGen" }
distances = { path = "../distances" }
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
csv = "1.3.0"

[dev-dependencies]
float-cmp = "0.9.0"

[lib]
path = "src/utils.rs"

[[bin]]
name = "shell"
path = "src/shell.rs"
